--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   firebase_messaging: ^14.7.18
   firebase_analytics: ^10.8.8
   flutter_local_notifications: ^17.0.0 # For local notification display
+  uuid: ^4.5.1
+  video_player: ^2.9.5
 
 dev_dependencies:
   flutter_test:
